--- a/css/diferenciales.css
+++ b/css/diferenciales.css
@@ -1,6 +1,7 @@
 .diferenciales {
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
+    background: #F7F4F4;
 }
 
 .diferenciales__lista {
@@ -26,7 +27,11 @@
 }
 
 .item__texto {
-    line-height: normal;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .diferenciales__item-reloj {
