--- a/css/institucional.css
+++ b/css/institucional.css
@@ -1,13 +1,21 @@
 .institucional {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-flow: column;
+    
 
     color: var(--fuente-ceniza-oscuro);
     text-align: center;
 
     padding-top: 2rem;
     padding-bottom: 2rem;
+}
+
+.institucional__caja{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
 }
 
 .institucional__titulo {
@@ -22,14 +30,27 @@
 }
 
 .institucional__descripcion {
+    align-self: flex-start;
+    text-align: left;
     margin-bottom: 2rem;
+    padding-top: 5rem;
 }
 
 .institucional__direccion {
-    font-size: 1.5rem;
+    align-self: flex-start;
+
+    padding-top: 5rem;
     line-height: normal;
 
     margin-bottom: 2rem;
+
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 31px;
+
+    color: #666666;
 }
 
 .institucional__contacto {
@@ -40,15 +61,36 @@
 }
 
 .institucional__contacto-telefono {
-    line-height: normal;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 26px;
+    /* identical to box height */
+
+    text-decoration-line: underline;
+
+    color: #0006FF;
 }
 
 .institucional__contacto-email {
-    color: var(--fuente-ceniza-oscuro);
-    text-decoration: underline;
+    /* color: var(--fuente-ceniza-oscuro); */
     display: block;
+
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 26px;
+    /* identical to box height */
+
+    text-decoration-line: underline;
+
+    color: #0006FF;
 }
 
 .institucional__video {
-    width: 100vw;
+    align-self: flex-end;
+    justify-self: center;
+    width: 35vw;
 }
