--- a/css/planes.css
+++ b/css/planes.css
@@ -7,16 +7,24 @@
 
 .planes__titulo {
     color: var(--fuente-ceniza-oscuro);
-    font-size: 1.5rem;
     font-family: var(--montserrat);
-
+    text-align: center;
     margin-bottom: 1.25rem;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+    /* identical to box height, or 100% */
+
+    text-transform: uppercase;
+
+    color: #4F4C4C;
 }
 
 .planes__tarjetas {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items:flex-end;
 }
 
 .tarjetas {
@@ -62,6 +70,10 @@
 .tarjetas__texto {
     color: var(--fuente-ceniza-oscuro);
     line-height: 28px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
 }
 
 .tarjetas__boton {
@@ -74,23 +86,39 @@
 
     padding: .75rem 2rem;
 
+    border-radius: 8px;
+
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
 .tarjetas--start {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+    /* identical to box height, or 100% */
+
+    text-align: center;
+
+    color: #035A76;
 }
 
 .tarjetas--ultra {
+    color: #690F8E;
 }
 
 .tarjetas--mega {
+    color: #B00024;
 }
 
 .tarjetas__boton--start {
+    border-color: #035A76;
 }
 
 .tarjetas__boton--ultra {
+    border-color: #690F8E;
 }
 
 .tarjetas__boton--mega {
