--- a/css/footer.css
+++ b/css/footer.css
@@ -1,14 +1,17 @@
 .footer {
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     background-color: var(--background-footer);
 
     padding-top: 2.5rem;
     padding-bottom: 2rem;
 }
-
+.footer__iconos {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+}
 .footer__social {
     display: flex;
 }
@@ -25,9 +28,13 @@
 .footer__navegacion {
     color: var(--background-blanco);
     font: var(--open-sans);
-    text-align: center;
-    line-height: 3;
-}
+    text-align: left;
+    padding-top: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+
+    }
 
 
 .footer__enlace {
